--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
+    "aos": "^2.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.7",
     "serve": "^12.0.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
